# gsplat_examlpes_uv

./: .gitignore  README.md  pyproject.toml
examples/: simple_trainer.py
